<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/chosen_pizza_image"
        android:layout_width="378dp"
        android:layout_height="107dp"
        android:contentDescription="@string/chosen_pizza_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/store" />

    <TextView
        android:id="@+id/size_options_view"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:text="@string/size_options"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="none"
        app:layout_constraintBottom_toTopOf="@+id/size_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosen_pizza_image"
        app:layout_constraintVertical_bias="0.761" />

    <Spinner
        android:id="@+id/remove_topping_spinner"
        android:layout_width="236dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosen_pizza_image"
        app:layout_constraintVertical_bias="0.648"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/additional_topping_spinner"
        android:layout_width="236dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosen_pizza_image"
        app:layout_constraintVertical_bias="0.413"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/size_spinner"
        android:layout_width="177dp"
        android:layout_height="48dp"
        android:entries="@array/spinner_sizes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <Button
        android:id="@+id/add_topping_button"
        android:layout_width="122dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:onClick="addToppingClick"
        android:text="@string/add_topping"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosen_pizza_image"
        app:layout_constraintVertical_bias="0.413" />

    <Button
        android:id="@+id/add_topping_button2"
        android:layout_width="122dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:onClick="removeToppingClick"
        android:text="@string/remove_topping"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosen_pizza_image"
        app:layout_constraintVertical_bias="0.648" />

    <TextView
        android:id="@+id/additional_toppings_view"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:text="@string/additional_toppings"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_spinner"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/selected_toppings_view"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:text="@string/selected_toppings"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_spinner"
        app:layout_constraintVertical_bias="0.382" />

    <TextView
        android:id="@+id/current_price"
        android:layout_width="204dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_topping_spinner"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/add_order_button"
        android:layout_width="204dp"
        android:layout_height="54dp"
        android:onClick="addPizzaToOrder"
        android:text="@string/add_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_price"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>